Fix search issue on mobile

--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -126,6 +126,11 @@
 		.mat-search--desktop {
 			display: none;
 		}
+                .mat-toolbar__section--end-icons {
+                    -webkit-box-flex: 0;
+                    -ms-flex: none;
+                    flex: none;
+		}
 	}
 	@media only screen and (min-width : 750px) {
 		.mat-search--mobile {
